upcoming mobile update

--- a/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
+++ b/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
@@ -30,11 +30,11 @@
           <p class="content"><b>Xiaomi Poco c3 price in India</b> may be Rs 8,499 and its <b>release date</b> may be October 23, 2020 (unofficial). This smartphone comes with 1 variants like 3/32 GB. Xiaomi Poco C3 which is expected to available in Black, Gold, orange colour. </p>
           <h3 style="font-weight: 400;">Xiaomi Poco C3 Key features:</h3>
           <ul class="content">
-            <li>Diaplay: 6.53 inches</li>
-            <li>Processor: MediaTek Helio G80</li>
-            <li>primary camera: 13-megapixel + 8-megapixel + 5-megapixel + 2-megapixel</li>
-            <li>selfie camera: 8-megapixel</li>
-            <li>Battery: Non-removable Li-Ion 5020 mAh battery (15.04 Wh)</li>
+            <li><b style="font-weight: 400;">Diaplay</b>: 6.53 inches</li>
+            <li><b style="font-weight: 400;">Processor</b>: MediaTek Helio G80</li>
+            <li><b style="font-weight: 400;">primary camera</b>: 13-megapixel + 8-megapixel + 5-megapixel + 2-megapixel</li>
+            <li><b style="font-weight: 400;">selfie camera</b>: 8-megapixel</li>
+            <li><b style="font-weight: 400;">Battery</b>: Non-removable Li-Ion 5020 mAh battery (15.04 Wh)</li>
             <li>Fast charging.</li>
           </ul>
           <p></p>
