upcoming mobile update

--- a/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
+++ b/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
@@ -24,17 +24,17 @@
         </div>
         <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by:  Naxon Tech</p>
         <div class="info">
-          <h4 class="content">About POCO c3</h4>
+          <h4 style="font-weight: 400;">About POCO c3</h4>
           <p class="content">Xiaomi is now going to launch a new smartphone, takes its Poco series one step further, its name is Poco 3. <b>Xiaomi Poco C3</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an octa-core (2 GHz, Dual core, Cortex A75 + 1.8 GHz, Hexa Core, Cortex A55) processor and it runs on MediaTek Helio G80 Chipset. </p>
           <p class="content">Xiaomi POCO C3 smartphone has a IPS LCD display. 1080 x 2340 Pixels and 395 ppi pixel density. Talking about its camera, On the front camera, you get a 8-megapixel primary camera and on the rear camera, there is a 13 megapixel wide-angle, 8 megapixels ultra-wide, 5-megapixel depth and 2 megapixels micro. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 5020 mAh battery. </p>
           <p class="content"><b>Xiaomi Poco c3 price in India</b> may be Rs 8,499 and its <b>release date</b> may be October 23, 2020 (unofficial). This smartphone comes with 1 variants like 3/32 GB. Xiaomi Poco C3 which is expected to available in Black, Gold, orange colour. </p>
           <h3 style="font-weight: 400;">Xiaomi Poco C3 Key features:</h3>
           <ul class="content">
-            <li><b style="font-weight: 400;">Diaplay</b>: 6.53 inches</li>
-            <li><b style="font-weight: 400;">Processor</b>: MediaTek Helio G80</li>
-            <li><b style="font-weight: 400;">primary camera</b>: 13-megapixel + 8-megapixel + 5-megapixel + 2-megapixel</li>
-            <li><b style="font-weight: 400;">selfie camera</b>: 8-megapixel</li>
-            <li><b style="font-weight: 400;">Battery</b>: Non-removable Li-Ion 5020 mAh battery (15.04 Wh)</li>
+            <li>Diaplay: 6.53 inches</li>
+            <li>Processor: MediaTek Helio G80</li>
+            <li>primary camera: 13-megapixel + 8-megapixel + 5-megapixel + 2-megapixel</li>
+            <li>selfie camera: 8-megapixel</li>
+            <li>Battery: Non-removable Li-Ion 5020 mAh battery (15.04 Wh)</li>
             <li>Fast charging.</li>
           </ul>
           <p></p>
