upcoming mobile update

--- a/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
+++ b/limbo/affiliate/templates/mobile/mi/poco c3/poco-c3.html
@@ -1,6 +1,6 @@
 {% extends 'page/bas.html' %}
 {% block desc%}<meta name="description" content="Xiaomi Poco C3 price in India may be Rs 8,499 and its release date may be October 23, 2020 (unofficial). This smartphone comes with 1 variants like 3/32GB. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Xiaomi poco c3, poco c3, Xiaomi poco c3 feature, poco c3 specification, Xiaomi poco c3 release date, poco c3 price, Xiaomi poco c3 price in india"> {% endblock key%}
+{% block key%}<meta name="keywords" content="Xiaomi poco c3, poco c3, poco c3 specification, Xiaomi poco c3 release date, poco c3 price, Xiaomi poco c3 price in india"> {% endblock key%}
 {% block style %}
 <style>
   .iframe{
@@ -16,8 +16,8 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content" style="font-weight: 400;">This news has come from Xiaomi, Xiaomi is thinking of bringing its smartphone Poco C3 to the market. Now let's see how long Xiaomi launches this new phone in India. This phone is going to be a budget friendly phone</h4>
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> POCO c3 : 3/32GB for Rs 8,499 Watch Full review.</h1>
+          <h5 class="content" style="font-weight: 400;">This news has come from Xiaomi, Xiaomi is thinking of bringing its smartphone Poco C3 to the market. Now let's see how long Xiaomi launches this new phone in India. This phone is going to be a budget friendly phone. Xiaomi poco c3 release date release date may be October 23, 2020</h5>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> POCO C3 : 3/32GB for Rs 8,499 Watch Full review.</h1>
         </div>
         <div>
           <img class="image" src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" alt="">
@@ -28,7 +28,7 @@
           <p class="content">Xiaomi is now going to launch a new smartphone, takes its Poco series one step further, its name is Poco 3. <b>Xiaomi Poco C3</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an octa-core (2 GHz, Dual-core, Cortex A75 + 1.8 GHz, Hexa Core, Cortex A55) processor and it runs on MediaTek Helio G80 Chipset. </p>
           <p class="content">Xiaomi POCO C3 smartphone has an IPS LCD display. 1080 x 2340 Pixels and 395 PPI pixel density. Talking about its camera, On the front camera, you get an 8-megapixel primary camera and on the rear camera, there is a 13 megapixel wide-angle, 8 megapixels ultra-wide, 5-megapixel depth and 2 megapixels micro. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 5020 mAh battery. </p>
           <h3 style="font-weight: 400;">Xiaomi Poco c3 price in India.</h3>
-          <p class="content">Xiaomi Poco c3 price in India may be Rs 8,499 and its release date may be October 23, 2020 (unofficial). This smartphone comes with 1 variant like 3/32 GB. Xiaomi Poco C3 which is expected to available in Black, Gold, orange color. </p>
+          <p class="content">Xiaomi Poco c3 price in India may be Rs 8,499 and Xiaomi poco c3 release date release date may be October 23, 2020 (unofficial). This smartphone comes with 1 variant like 3/32 GB. Xiaomi Poco C3 which is expected to available in Black, Gold, orange color. </p>
           <h3 style="font-weight: 400;">Xiaomi Poco C3 Key features:</h3>
           <ul class="content">
             <li>Diaplay: 6.53 inches</li>
