--- a/limbo/affiliate/templates/mobile/mi/redmi note 10/redmi-note-10.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi note 10/redmi-note-10.html
@@ -1,6 +1,6 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Xiaomi Poco C3 price in India may be Rs 8,499 and its release date may be October 23, 2020 (unofficial). This smartphone comes with 1 variants like 3/32GB. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Xiaomi poco c3, poco c3, poco c3 specification, Xiaomi poco c3 release date, poco c3 price, Xiaomi poco c3 price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Xiaomi Mi note 10 price in India may be Rs 43,200 and Xiaomi Mi note 10 launch date in india may be august 24, 2020. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Xiaomi mi note 10, mi note 10, mi note 10 specification, Xiaomi mi note 10 release date, mi note 10 price, Xiaomi mi note 10 price in india"> {% endblock key%}
 {% block style %}
 <style>
   .iframe{
@@ -10,39 +10,39 @@
 </style>
 {% endblock style %}
     {% load static %}
-    {% block title%}Xiaomi Poco C3 price in india, specification and features - hipein{% endblock title%}
+    {% block title%}Mi note 10 launch date in india, price and specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h5 class="content" style="font-weight: 400;">This news has come from Xiaomi, Xiaomi is thinking of bringing its smartphone Poco C3 to the market. Now let's see how long Xiaomi launches this new phone in India. This phone is going to be a budget friendly phone. Xiaomi poco c3 release date release date may be October 23, 2020</h5>
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> POCO C3 : 3/32GB for Rs 8,499 Watch Full review.</h1>
+          <h5 class="content" style="font-weight: 400;">This news has come from Xiaomi, Xiaomi is thinking of bringing its smartphone Redmi note 10 to the indian market. Now let's see how long Xiaomi launches this new phone in India. Xiaomi Mi note 10 launch date in india may be august 24, 2020</h5>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Mi NOTE 10 : 6/128GB for Rs 43,200 read Full specification.</h1>
         </div>
         <div>
-          <img class="image" src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/mi/mi-note-10-2.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by:  Naxon Tech</p>
+        <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  Xtream Droid</p>
         <div class="info">
-          <h2 style="font-weight: 400;">About POCO C3</h2>
-          <p class="content">Xiaomi is now going to launch a new smartphone, takes its Poco series one step further, its name is Poco 3. <b>Xiaomi Poco C3</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an octa-core (2 GHz, Dual-core, Cortex A75 + 1.8 GHz, Hexa Core, Cortex A55) processor and it runs on MediaTek Helio G80 Chipset. </p>
-          <p class="content">Xiaomi POCO C3 smartphone has an IPS LCD display. 1080 x 2340 Pixels and 395 PPI pixel density. Talking about its camera, On the front camera, you get an 8-megapixel primary camera and on the rear camera, there is a 13 megapixel wide-angle, 8 megapixels ultra-wide, 5-megapixel depth and 2 megapixels micro. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 5020 mAh battery. </p>
-          <h3 style="font-weight: 400;">Xiaomi Poco c3 price in India.</h3>
-          <p class="content">Xiaomi Poco c3 price in India may be Rs 8,499 and Xiaomi poco c3  release date may be October 23, 2020 (unofficial). This smartphone comes with 1 variant like 3/32 GB. Xiaomi Poco C3 which is expected to available in Black, Gold, orange color. </p>
-          <h3 style="font-weight: 400;">Xiaomi Poco C3 Key features:</h3>
+          <h2 style="font-weight: 400;">About Mi Note 10</h2>
+          <p class="content">Xiaomi Mi Note 10 was launched on  6th nov  2019. Xiaomi Mi Note 10 comes with a 6.47 (in inch) touchscreen display.  The phone is powered by a 2.2GHz octa-core Qualcomm Snapdragon 730G processor. The Xiaomi Mi Note 10 runs Android 10 and is powered by a 5260mAh non-removable battery. The Xiaomi Mi Note 10 has supports for fast charging. </p>
+          <p class="content">Xiaomi Mi Note 10 smartphone has an AMOLED display. It has a resolution of 1080x2340 pixels and 395 PPI pixel density. Talking about its camera, On the front camera, you get an 32-megapixel primary camera and on the rear camera, there is a 108 megapixel wide-angle, 20 megapixels ultra-wide, 12-megapixel depth and 5 megapixels micro. camera with features like Digital Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 5260 mAh battery. </p>
+          <h3 style="font-weight: 400;">Xiaomi Mi note 10 launch date in india.</h3>
+          <p class="content">Xiaomi Mi note 10 price in India may be Rs 43,200 and Xiaomi Mi note 10 launch date in india may be august 24, 2020(unofficial). This smartphone comes with 1 variant like 6/128 GB with color options like Glacier White, Aurora Green, and Midnight Black. </p>
+          <h3 style="font-weight: 400;">Xiaomi Mi note 10 Key features:</h3>
           <ul class="content">
-            <li>Diaplay: 6.53 inches</li>
-            <li>Processor: MediaTek Helio G80</li>
-            <li>primary camera: 13-megapixel + 8-megapixel + 5-megapixel + 2-megapixel</li>
-            <li>selfie camera: 8-megapixel</li>
-            <li>Battery: Non-removable Li-Ion 5020 mAh battery (15.04 Wh)</li>
+            <li>Diaplay: 6.47 inches</li>
+            <li>Processor: 	Qualcomm Snapdragon 730G</li>
+            <li>primary camera: 108-megapixel + 20-megapixel + 12-megapixel + 5-megapixel</li>
+            <li>selfie camera: 32-megapixel</li>
+            <li>Battery: Non-removable Li-Ion 5260 mAh battery</li>
             <li>Fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">POCO c3 specification</h3>
+    <h3 class="spec_title">Mi note 10 specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -50,7 +50,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>October 23, 2020 (Unofficial)</p>
+          <p>august 24, 2020 (Unofficial)</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -74,11 +74,11 @@
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>POCO C3</p>
+          <p>Mi note 10</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Black, gold, orange</p>
+          <p>Glacier White, Aurora Green, Midnight Black</p>
         </div>
       </div>
     </div>
@@ -118,19 +118,19 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>IPS LCD capacitive touchscreen, 16M colors</p>
+          <p>AMOLED display capacitive touchscreen, 16M colors</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
-          <p>6.53</p>
+          <p>6.47</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>1080 x 2340 Pixels</p>
+          <p>1080x2340 pixels</p>
         </div>
         <div class="specs_info1">
           <strong>Protection</strong>
-          <p>	Corning Gorilla Glass</p>
+          <p>Corning Gorilla Glass 5</p>
         </div>
       </div>
     </div>
@@ -146,7 +146,7 @@
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>MediaTek Helio G80</p>
+          <p>Qualcomm Snapdragon 730G</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
@@ -154,7 +154,7 @@
         </div>
         <div class="specs_info1">
           <strong>GPU</strong>
-          <p>Mali-G52</p>
+          <p>Adreno 618</p>
         </div>
       </div>
     </div>
@@ -170,7 +170,7 @@
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>3/32GB RAM</p>
+          <p>6/128GB RAM</p>
         </div>
       </div>
     </div>
@@ -189,12 +189,12 @@
           <p>4128 x 3096 Pixels Resolution</p>
         </div>
         <div class="specs_info">
-          <strong>Resolution</strong>
-          <p>13 MP + 8 MP + 5 MP + 2 MP</p>
+          <strong>Rear camera</strong>
+          <p>108 MP + 20 MP + 12 MP + 5 MP</p>
         </div>
         <div class="specs_info">
           <strong>Front camera</strong>
-          <p>8 MP Primary Camera</p>
+          <p>32 MP Primary Camera</p>
         </div>
       </div>
     </div>
@@ -206,11 +206,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>Non-removable Li-Po 5020 mAh battery</p>
+          <p>Non-removable Li-Po 5260 mAh battery</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes, Fast charging</p>
+          <p>Yes, Fast charging 30W, 100% in 65 min </p>
         </div>
       </div>
     </div>
@@ -222,11 +222,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>WLAN</strong>
-          <p>	Yes, Wi-Fi 802.11, b/g/n, hotspot</p>
+          <p>Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, hotspot</p>
         </div>
         <div class="specs_info">
           <strong>Bluetooth</strong>
-          <p>v5.0</p>
+          <p>v5.1</p>
         </div>
         <div class="specs_info">
           <strong>GPS</strong>
@@ -246,7 +246,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint, Light sensor, Proximity sensor, Accelerometer</p>
+            <p>	Fingerprint (under display, optical), accelerometer, gyro,</p>
+        </div>
+        <div class="specs_info">
+          <strong></strong>
+            <p> proximity, compass</p>
         </div>
       </div>
     </div>
