--- a/limbo/affiliate/templates/mobile/mi/redmi note 10/redmi-note-10.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi note 10/redmi-note-10.html
@@ -1,6 +1,6 @@
 {% extends 'page/bas.html' %}
 {% block desc%}<meta name="description" content="Xiaomi Mi note 10 price in India may be Rs 43,200 and Xiaomi Mi note 10 launch date in india may be august 24, 2020. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Xiaomi mi note 10, mi note 10, mi note 10 specification, Xiaomi mi note 10 release date, mi note 10 price, Xiaomi mi note 10 price in india"> {% endblock key%}
+{% block key%}<meta name="keywords" content="Xiaomi mi note 10, mi note 10, mi note 10 specification, Xiaomi Mi note 10 launch date in india , mi note 10 price, Xiaomi mi note 10 price in india"> {% endblock key%}
 {% block style %}
 <style>
   .iframe{
