--- a/limbo/affiliate/templates/mobile/mi/redmi note 10/redmi-note-10.html
+++ b/limbo/affiliate/templates/mobile/mi/redmi note 10/redmi-note-10.html
@@ -26,7 +26,7 @@
         <div class="info">
           <h2 style="font-weight: 400;">About Mi Note 10</h2>
           <p class="content">Xiaomi Mi Note 10 was launched on  6th nov  2019. Xiaomi Mi Note 10 comes with a 6.47 (in inch) touchscreen display.  The phone is powered by a 2.2GHz octa-core Qualcomm Snapdragon 730G processor. The Xiaomi Mi Note 10 runs Android 10 and is powered by a 5260mAh non-removable battery. The Xiaomi Mi Note 10 has supports for fast charging. </p>
-          <p class="content">Xiaomi Mi Note 10 smartphone has an AMOLED display. It has a resolution of 1080x2340 pixels and 395 PPI pixel density. Talking about its camera, On the front camera, you get an 32-megapixel primary camera and on the rear camera, there is a 108 megapixel wide-angle, 20 megapixels ultra-wide, 12-megapixel depth and 5 megapixels micro. camera with features like Digital Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 5260 mAh battery. </p>
+          <p class="content">Xiaomi Mi Note 10 smartphone has an AMOLED display capacitive touchscreen, 16M colors. It has a resolution of 1080x2340 pixels and 395 PPI pixel density. Talking about its camera, On the front camera, you get an 32-megapixel primary camera and on the rear camera, there is a 108 megapixel wide-angle, 20 megapixels ultra-wide, 12-megapixel depth and 5 megapixels micro. camera with features like Digital Auto Flash, Face detection, Touch to focus. It has support for fast charging and has a non-removable 5260 mAh battery. </p>
           <h3 style="font-weight: 400;">Xiaomi Mi note 10 launch date in india.</h3>
           <p class="content">Xiaomi Mi note 10 price in India may be Rs 43,200 and Xiaomi Mi note 10 launch date in india may be august 24, 2020(unofficial). This smartphone comes with 1 variant like 6/128 GB with color options like Glacier White, Aurora Green, and Midnight Black. </p>
           <h3 style="font-weight: 400;">Xiaomi Mi note 10 Key features:</h3>
@@ -190,7 +190,7 @@
         </div>
         <div class="specs_info">
           <strong>Rear camera</strong>
-          <p>108 MP + 20 MP + 12 MP + 5 MP</p>
+          <p>108-megapixel + 20-megapixel + 12-megapixel + 5-megapixel</p>
         </div>
         <div class="specs_info">
           <strong>Front camera</strong>
