camera mobilr changes

--- a/limbo/affiliate/templates/blog/camera_15k/camera-15k.html
+++ b/limbo/affiliate/templates/blog/camera_15k/camera-15k.html
@@ -9,11 +9,11 @@
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle">Best camera mobile under 15,000-INR</h1>
-          <h5 class="content">For most of the buyers <span>camera</span> played an important role in mobile, to atttract the customers mobile companies now a days work hard on the camera's of the phone. There are top 5 mobiles which have high-resolution multi-camera setups, powerful processors, HDR capabilities. Check out this list if you are looking for the best camera mobile phones of Rs 15,000.</h5>
+          <h1 class="content_tittle" style="font-weight:400;">Best camera mobile under 15,000-INR</h1>
           <p>By <span  style="color:blue">Gulshan Bhumij</span>- Updated on <b style="color:gray">6 July, 2020</b></p>
-          <img class="image" src="{% static 'image/mobile/camera-15k/photo-camera.jpg'%}" alt="">
-          <p class="content">List of top 5 best camera mobile under 15,000-INR are given below:</p>
+          <h5 class="content" style="font-weight:400;">For most of the buyers <span>camera</span> played an important role in mobile, to atttract the customers mobile companies now a days work hard on the camera's of the phone. There are top 5 mobiles which have high-resolution multi-camera setups, powerful processors, HDR capabilities. Check out this list if you are looking for the best camera mobile phones of Rs 15,000.</h5>
+          <img class="image" src="{% static 'image/mobile/camera-15k/photo-camera.jpg'%}" alt=""><br>
+          <h2 style="font-weight:400;">List of top 5 best camera mobile under 15,000-INR are given below:</h2>
           <ol class="content" style="border-bottom: 1px solid #eee;">
             <li>Poco M2 Pro</li>
             <li>Realme Narzo 10</li>
