camera mobilr changes

--- a/limbo/affiliate/templates/blog/camera_15k/camera-15k.html
+++ b/limbo/affiliate/templates/blog/camera_15k/camera-15k.html
@@ -25,14 +25,14 @@
           </ol>
         </div>
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">1. Poco M2 Pro</h2>
+          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight:400;">1. Poco M2 Pro</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/camera-15k/poco-m2-pro.jpg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-by Technology in the Future</p>
-          <h4 class="content">About Poco M2 Pro</h4>
+          <h4 style="font-weight:400;">About Poco M2 Pro</h4>
           <p class="content">The Poco M2 Pro has four rear cameras, which include a primary 48-megapixel sensor, an 8-megapixel sensor with a wide-angle lens, a 5-megapixel macro camera, and a 2-megapixel depth camera. You get a 16-megapixel hole-punch selfie camera. The M2 Pro has the same version of the MIUI camera app as the Redmi Note 9 Pro. From what I could tell, the only real difference between the two phones in terms of functionality is that you can use Night mode for the selfie camera on the M2 Pro </p>
-          <h4 class="content">Poco M2 Pro: Key specifications </h4>
+          <h4 style="font-weight:400;">Poco M2 Pro: Key specifications </h4>
           <ul class="content">
             <li>Display : 6.5"(1080*2400)</li>
             <li>Rear Camera : 48MP + 8MP + 5MP + 2MP </li>
@@ -50,20 +50,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 2 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">2. Realme Narzo 10</h2>
+          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight:400;">2. Realme Narzo 10</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/camera-15k/realme-narzo-10.jpg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source |youtube.com: uploaded-by: DroidHolic</p>
-          <h4 class="content">About Realme Narzo 10</h4>
+          <h4 style="font-weight:400;">About Realme Narzo 10</h4>
           <p class="content">Realme Narzo 10 comes with the quad camera setup- a 48-megapixel Samsung sensor with an aperture of f/1.8 featuring PDAF, an 8-megapixel ultrawide sensor with 119-degree FOV, a 2-megapixel macro sensor, and a 2-megapixel black and white sensor. For selfie, there is a single 16-megapixel sensor that has an f/2.0 aperture. The camera app on the Realme phone has not changed, which means there is an Ultra Macro mode, a Panorama mode, and others.</p>
-          <h4 class="content">Realme Narzo 10: Key specifications </h4>
+          <h4 style="font-weight:400;">Realme Narzo 10: Key specifications </h4>
           <ul class="content">
             <li>Diaplay: 6.50-inch (720x1600 pixels)</li>
             <li>Rear Camera : 48MP + 8MP + 2MP + 2MP </li>
@@ -81,20 +78,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 3 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">3. Redmi Note 9 Pro</h2>
+          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight:400;">3. Redmi Note 9 Pro</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/pubg/redmi-note-9-pro.jpeg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google-by  www.digit.in</p>
-          <h4 class="content">About Redmi Note 9 Pro</h4>
+          <h4 style="font-weight:400;">About Redmi Note 9 Pro</h4>
           <p class="content">The Redmi Note 9 Pro has a lower starting price than its predecessors, but also doesn't offer all the modern features that you might expect. It has a 6.67-inch LCD screen with a 60Hz refresh rate and hole-punch front camera at the top. The processor is a Qualcomm Snapdragon 720G which is surprisingly powerful for this segment. You also get a 5020mAh battery and suppport for 18W fast charging.The Redmi Note 9 Pro comes with a 48MP primary rear camera with Samsung Isocell GM2 sensor. This is paired by an 8MP ultra-wide-angle camera with f/2.2 aperture, a 5MP macro and a 2MP depth sensor.</p>
-          <h4 class="content">Redmi NOte 9 Pro: Key specifications </h4>
+          <h4 style="font-weight:400;">Redmi NOte 9 Pro: Key specifications </h4>
           <ul class="content">
             <li>Diaplay: 6.67-inch (1080x2400 pixels)</li>
             <li>Rear Camera : 48MP + 8MP + 5MP + 2MP </li>
@@ -112,20 +106,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 4 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">4. Realme 6</h2>
+          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight:400;">4. Realme 6</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/realme/realme-6-2.jpg' %}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com| uploaded-by Xmill Tech Hindi</p>
-          <h4 class="content">About Realme 6 </h4>
+          <h4 style="font-weight:400;">About Realme 6 </h4>
           <p class="content">The Realme 6 packs in a quad-camera setup at the back consisting of a 64-megapixel primary camera, an 8-megapixel wide-angle camera with a 119-degree field of view, a 2-megapixel monochrome camera, and a 2-megapixel macro camera. At the front, it has a 16-megapixel selfie shooter. The camera software is identical to what we have seen several other mid-range smartphones, and we had no issues going through the different shooting modes in the camera app. There are quick toggles for HDR, filters, and Chroma Boost. There is AI scene recognition and the smartphone is able to detect what it is pointed towards.</p>
-          <h4 class="content">Realme Narzo 10: Key specifications </h4>
+          <h4 style="font-weight:400;">Realme Narzo 10: Key specifications </h4>
           <ul class="content">
             <li>Diaplay: 6.50-inch (1080x2400 pixels)</li>
             <li>Rear Camera : 64MP + 8MP + 2MP + 2MP </li>
@@ -143,20 +134,17 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
         <!-- 5 -->
         <div class="info">
-          <h2 class="content" style="padding-left:3px; border-left: 2px solid red">5. Poco X2</h2>
+          <h2 style="padding-left:3px; border-left: 2px solid red; font-weight:400;">5. Poco X2</h2>
           <div>
             <img class="image" src="{% static 'image/mobile/camera-15k/poco-x2.jpg'%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com | Uploaded by: Technolobe</p>
-          <h4 class="content">About Poco X2 </h4>
+          <h4 style="font-weight:400;">About Poco X2 </h4>
           <p class="content">The Poco X2 has four rear and two front cameras. The primary 64-megapixel rear camera has an f/1.89 aperture and uses the Sony IMX686 sensor which succeeds the widely used IMX586. There's also an 8-megapixel f/2.2 ultra-wide camera, a 2-megapixel macro camera with a 2cm-10cm focal range as well as autofocus, and a 2-megapixel depth sensor. The primary selfie camera has a 20-megapixel resolution and is accompanied by a 2-megapixel depth sensor.</p>
-          <h4 class="content">Realme Narzo 10: Key specifications </h4>
+          <h4 style="font-weight:400;">Realme Narzo 10: Key specifications </h4>
           <ul class="content">
             <li>Diaplay: 6.67-inch (1080x2400 pixels)</li>
             <li>Rear Camera : 64MP + 2MP + 8MP + 2MP </li>
@@ -174,9 +162,6 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
-
-
-
         </div>
       </div>
     </div>
