--- a/limbo/affiliate/templates/blog/camera_15k/camera-15k.html
+++ b/limbo/affiliate/templates/blog/camera_15k/camera-15k.html
@@ -16,13 +16,14 @@
           <img class="image" src="{% static 'image/mobile/camera-15k/photo-camera.jpg'%}" alt=""><br>
           <hr class="my-2">
           <h2 style="font-weight:400;">List of top 5 best camera mobile under 15,000-INR are given below:</h2>
-          <ol class="content" style="border-bottom: 1px solid #eee;">
+          <ol class="content">
             <li>Poco M2 Pro</li>
             <li>Realme Narzo 10</li>
             <li>Redmi Note 9 Pro</li>
             <li>Realme 6</li>
             <li>Poco X2</li>
           </ol>
+          <hr class="my-2">
         </div>
         <div class="info">
           <h2 style="padding-left:3px; border-left: 2px solid red; font-weight:400;">1. Poco M2 Pro</h2>
@@ -50,6 +51,7 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
+            <hr class="my-2">
         </div>
         <!-- 2 -->
         <div class="info">
@@ -78,6 +80,7 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
+            <hr class="my-2">
         </div>
         <!-- 3 -->
         <div class="info">
@@ -106,6 +109,7 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
+            <hr class="my-2">
         </div>
         <!-- 4 -->
         <div class="info">
@@ -134,6 +138,7 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
+            <hr class="my-2">
         </div>
         <!-- 5 -->
         <div class="info">
@@ -162,6 +167,7 @@
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
+            <hr class="my-2">
         </div>
       </div>
     </div>
