samsung galxay  note 20

--- a/limbo/affiliate/templates/mobile/samsung/note 20/note 20.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 20/note 20.html
@@ -1,10 +1,10 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Xiaomi Mi note 10 price in India may be Rs 43,200 and Xiaomi Mi note 10 launch date in india may be august 24, 2020. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Xiaomi mi note 10, mi note 10, mi note 10 specification, Xiaomi Mi note 10 launch date in india , mi note 10 price, Xiaomi mi note 10 price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Samsung Galaxy Note 20 price in India may be Rs 43,200 and Samsung Galaxy Note 20 launch date in india may be august 24, 2020. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Samsung Galaxy Note 20, Samsung Galaxy Note 20, Samsung Galaxy Note 20 specification, Samsung Galaxy Note 20 launch date in india , Samsung Galaxy Note 20 price, Samsung Galaxy Note 20 price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Mi note 10 launch date in india, price and specification - hipein{% endblock title%}
+    {% block title%}Samsung Galaxy Note 20 launch date in india, price and specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
@@ -18,12 +18,12 @@
         </div>
         <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com - Uploaded by:  XEETECHCARE</p>
         <div class="info">
-          <h2 style="font-weight: 400;">About Mi Note 10</h2>
+          <h2 style="font-weight: 400;">About Samsung Galaxy Note 20</h2>
           <p class="content">Samsung has launched its new phone Samsung Galaxy Note 20 in India on August 5. 2020. in term of display, Samsung galaxy note 20 have 6.7 (in inch) with FHD + Super AMOLED Plus touchscreen display.  The phone is powered by a 2.73GHz octa-core Exynos 990 SoC processor. The phone runs Android 10 and is powered by a 4300mAh non-removable battery. The Samsung Galaxy Note 20 has supports for the 5G network in some regions. </p>
           <p class="content">Samsung Galaxy Note 20 smartphone has an FHD+ Super AMOLED Plus capacitive touchscreen, 16M colors. It has a resolution of 1080 x 2400 pixels and 393 PPI pixel density. Talking about its camera, On the front camera, you get a 10-megapixel primary camera and on the rear camera, there is a 64-megapixel Telephoto Camera, 12 megapixels ultra-wide, and  12MP Wide-angle Camera. camera with features like auto flash, face detection, digital zoom, and touch to focus. It has support for fast charging and has a non-removable 4300mAh mAh battery. </p>
           <h3 style="font-weight: 400;">Samsung galaxy Note 20 launch date and price in india.</h3>
           <p class="content">The price of Samsung Galaxy Note 20 smartphone in India is likely to be Rs 99,999. Samsung Galaxy Note 20 to be launched in the country on 5 August 2020. This smartphone comes with 2 variant like 8/128 GB and 8/256 GB with color options like mystic green, mystic grey, and mystic bronze. </p>
-          <h3 style="font-weight: 400;">Xiaomi Mi note 10 Key features:</h3>
+          <h3 style="font-weight: 400;">Samsung Galaxy Note 20 Key features:</h3>
           <ul class="content">
             <li>Diaplay: 6.7 inches</li>
             <li>Processor: 	Exynos 990 SoC processor</li>
@@ -36,7 +36,7 @@
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Mi note 10 specification</h3>
+    <h3 class="spec_title">Samsung Galaxy Note 20 specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
